--- a/agree/res/layout/fragment_home.xml
+++ b/agree/res/layout/fragment_home.xml
@@ -57,12 +57,21 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
-         android:layout_below="@+id/home_title"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:layout_below="@+id/home_title" >
 
-        <com.BJ.utils.GridViewWithHeaderAndFooter
+        <GridView
             android:id="@+id/home_gridview"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:numColumns="2" >
+        </GridView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+    <!--
+          android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#ffffff"
             android:columnWidth="90dp"
@@ -70,8 +79,7 @@
             android:horizontalSpacing="10dp"
             android:numColumns="2"
             android:stretchMode="columnWidth"
-            android:verticalSpacing="10dp" >
-        </com.BJ.utils.GridViewWithHeaderAndFooter>
-    </android.support.v4.widget.SwipeRefreshLayout>
+            android:verticalSpacing="10dp"
+    -->
 
 </RelativeLayout>
