--- a/agree/res/layout/home_gridview_item.xml
+++ b/agree/res/layout/home_gridview_item.xml
@@ -5,31 +5,38 @@
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentBottom="true"
+        android:layout_height="180.0dp"
         android:layout_centerHorizontal="true"
         android:layout_margin="10.0dp"
         android:background="#d3d3d3" >
 
         <ImageView
             android:id="@+id/home_item_head"
-            android:layout_width="130.0dp"
-            android:layout_height="100.0dp"
+            android:layout_width="match_parent"
+            android:layout_height="130.0dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_margin="10.0dp"
             android:scaleType="fitXY"
             android:src="@drawable/newteam" />
 
-        <TextView
-            android:id="@+id/home_item_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_below="@+id/home_item_head"
             android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:text="TextView"
-            android:textSize="17.0sp" />
+            android:layout_margin="0.50dp"
+            android:background="#ffffff" >
+
+            <TextView
+                android:id="@+id/home_item_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                android:text="TextView"
+                android:textSize="17.0sp" />
+        </RelativeLayout>
     </RelativeLayout>
 
 </RelativeLayout>
