--- a/agree/res/layout/home_teamadd_item.xml
+++ b/agree/res/layout/home_teamadd_item.xml
@@ -5,31 +5,39 @@
 
     <RelativeLayout
         android:id="@+id/home_teamadd_head_layout"
-        android:layout_width="150.0dp"
-        android:layout_height="150.0dp"
+        android:layout_width="fill_parent"
+        android:layout_height="180.0dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_margin="10.0dp"
         android:background="#d3d3d3" >
 
-        <ImageView
-            android:id="@+id/home_teamadd_head"
-            android:layout_width="80.0dp"
-            android:layout_height="80.0dp"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/home_add" />
+            android:layout_margin="0.50dp"
+            android:background="#ffffff" >
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/home_teamadd_head"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="5.0dp"
-            android:textColor="#aaaaaa"
-            android:text="添加新的小组" />
+            <ImageView
+                android:id="@+id/home_teamadd_head"
+                android:layout_width="80.0dp"
+                android:layout_height="80.0dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/greenjiahao1" />
 
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/home_teamadd_head"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="15.0dp"
+                android:text="添加新的小组"
+                android:textColor="#808080" />
+        </RelativeLayout>
     </RelativeLayout>
 
 </RelativeLayout>
